methods.flowerpot.FlowerPot.scala.code
def growFlowers()
{
  var listPos:Array[(Int,Int)]=Array((7,6),(3,6),(5,4))
  var listColor:Array[Color]=Array(color.red,Color.cyan,Color.orange,Color.green,Color.pink)
  var compteur=0
  for (i<-listColor)
  	{
      setPos(listPos[compteur])
      fleur(i)
      compteur+=1
    }
  
}

def fleur(color:Color)
{
  ligne(color)
  tourneDroite(2)
  droite()
  ligne(color)
  tourneDroite(1)
}



def ligne(color:Color)
{
  var L:Array[Color]=Array(color,Color.yellow)
  for(i<-L)
  	{
      marquer(i)
      avance()
    }
  marquer(color)
}

def tourneDroite(nb:Int)
{
  for (i<-1 to nb)
  	{
    	droite()
  		avance()
    }
}


def marquer(color:Color)
{
  setCouleurBrosse(color)
  baisseBrosse()
  leveBrosse()
}